--- a/src/views/contact-us.jade
+++ b/src/views/contact-us.jade
@@ -1,7 +1,7 @@
 extends ./layouts/bootstrap.jade
 
-block vars
-  -var page='Contact Us'
+block append vars
+  -var page="Contact Us"
 
 block content
   section.section-contactus.section-banner
@@ -10,24 +10,24 @@ block content
       .contact-form.section-content
         h1.section-heading We’d love to hear from you!
         p Reach us by using this form
-        form.form-contact(data-toggle="validator",id='contact-form')
+        form.form-contact(data-toggle="validator", id="contact-form")
           .row
             .col-md-6
               .form-group
                 label(for="input-fname") Name
                 span.text-danger *
-                input#input-fname.form-control(type="text",required)
+                input#input-fname.form-control(type="text", required)
               .form-group
                 label(for="inputEmail") Email
                 span.text-danger *
-                input#inputEmail.form-control(type="email",required)
+                input#inputEmail.form-control(type="email", required)
               .form-group
                 label(for="inputnumber") Contact Number
                 input#inputnumber.form-control(type="text")
               .form-group
                 label(for="input-organization") Organization
                 span.text-danger *
-                input#input-organization.form-control(type="text",required)
+                input#input-organization.form-control(type="text", required)
               .form-group
                 label(for="inputcompany") Job Title
                 input#inputcompany.form-control(type="text")
@@ -42,11 +42,11 @@ block content
             .col-md-6
               .form-group.textarea-group
                 label(for="exampleFormControlTextarea1") How can we help you?
-                textarea(class="form-control",id="exampleFormControlTextarea1" ,rows="7")
+                textarea(class="form-control", id="exampleFormControlTextarea1" ,rows="7")
               .captcha
-                .g-recaptcha(data-sitekey='6LcJHvsSAAAAANmruZ9e8eYIq1TyJeZC4Zq6YhDG',data-callback="recaptchaCallback",data-expired-callback="recaptchaExpired")
+                .g-recaptcha(data-sitekey='6LcJHvsSAAAAANmruZ9e8eYIq1TyJeZC4Zq6YhDG', data-callback="recaptchaCallback", data-expired-callback="recaptchaExpired")
               .btn-wrap
-                button.btn.btn-gray(type='submit', id='contact-us-btn') Submit
+                button.btn.btn-gray(type="submit", id="contact-us-btn") Submit
         //=
           form.form-newsletter
             .form-row
