--- a/src/views/open-source.jade
+++ b/src/views/open-source.jade
@@ -1,7 +1,7 @@
 extends ./layouts/bootstrap.jade
 
-block vars
-  -var page='Open Source'
+block append vars
+  -var page="Open Source"
 
 block content
   section.section-open_source.section-banner
