--- a/src/views/innovation.jade
+++ b/src/views/innovation.jade
@@ -1,7 +1,7 @@
 extends ./layouts/bootstrap.jade
 
-block vars
-  -var page='Innovation'
+block append vars
+  -var page="Innovation"
 
 block content
   section.section-innovation.section-content
@@ -14,19 +14,19 @@ block content
           li(data-target='#carouselInnovation', data-slide-to='2')
         .carousel-inner
           .carousel-item.active
-            img.img-fluid.img-desktop(src='./images/innovation-cc.png', alt='First slide')
-            img.img-fluid.img-mobile(src='./images/innovation-cc-mobile.png', alt='First slide')
+            img.img-fluid.img-desktop(src=asset_url + 'images/innovation-cc.png', alt='First slide')
+            img.img-fluid.img-mobile(src=asset_url + 'images/innovation-cc-mobile.png', alt='First slide')
             .info-wrap
                 p CodeCuriosity is a platform that encourages contributions to open source. Everyone is rewarded for their efforts, no matter how big or small they are. Our aim is to make open source contribution a habit!
                 p We call this our anti-startup. “How to lose money consistently and be proud of it!” :D
           .carousel-item
-            img.img-fluid.img-desktop(src='./images/innovation-kimaya.png', alt='Second slide')
-            img.img-fluid.img-mobile(src='./images/innovation-kimaya-mobile.png', alt='Second slide')
+            img.img-fluid.img-desktop(src=asset_url + 'images/innovation-kimaya.png', alt='Second slide')
+            img.img-fluid.img-mobile(src=asset_url + 'images/innovation-kimaya-mobile.png', alt='Second slide')
             .info-wrap
                 p Kimaya-TPN is a cutting-edge, pilot-tested application, built with the aim of making nutritional calculations fully automated, error free and fast. Kimaya-TPN is being used by KEM-NICU & alike, to do calculations using the Hyperalimentation Worksheet for preparing TPN
           .carousel-item
-            img.img-fluid.img-desktop(src='./images/innovation-hunger.png', alt='Second slide')
-            img.img-fluid.img-mobile(src='./images/innovation-hunger-mobile.png', alt='Second slide')
+            img.img-fluid.img-desktop(src=asset_url + 'images/innovation-hunger.png', alt='Second slide')
+            img.img-fluid.img-mobile(src=asset_url + 'images/innovation-hunger-mobile.png', alt='Second slide')
             .info-wrap
                 p Hunger Terminal is an application developed in order to reduce scrub food wastage where company caters food for its employees.
         a.carousel-control-prev(href='#carouselInnovation', role='button', data-slide='prev')
