--- a/src/views/job-description-react.jade
+++ b/src/views/job-description-react.jade
@@ -1,7 +1,7 @@
 extends ./layouts/bootstrap.jade
 
-block vars
-  -var page='Career'
+block append vars
+  -var page="Career"
 
 block content
   section.section-description
