--- a/src/views/technologies.jade
+++ b/src/views/technologies.jade
@@ -1,7 +1,7 @@
 extends ./layouts/bootstrap.jade
 
-block vars
-  -var page='Technologies'
+block append vars
+  -var page="Technologies"
 
 block content
   section#technologiesTop.section-technologies.section-banner
@@ -171,7 +171,7 @@ block content
         #iot.card.card-expertise
           .card-body
             h2.card-title.text-uppercase iot
-            img.card-img(src="./images/iot.png",alt="IOT-Logo")
+            img.card-img(src=asset_url + 'images/iot.png',alt='IOT-Logo')
             p.card-text With the well-known benefits of AI in the world of technology, we cater to deliver robust IoT-led solutions to our clients aligned with achieving data-driven capitalism. We build simple and smart web-based and mobile-based applications for our clients from different verticals and further help them with utmost assistance and sustainable solutions.  
             .scroll-top
               a.btn-scroll(href='#technologiesTop') go to top
@@ -179,7 +179,7 @@ block content
         #open-source.card.card-expertise
           .card-body
             h2.card-title Open Source
-            img.card-img(src='./images/opensource.png', alt='Open-Source-Logo')
+            img.card-img(src=asset_url + 'images/opensource.png', alt='Open-Source-Logo')
             p.card-text We believe in giving back, we believe in opensource! We always try to encourage, motivate developers to get actively involve into the opensource community and contribute to various projects. Knowing that everyone needs motivation & help to upskill thier work, we always come up with new ideas like Opensource Fridays & codecuriosity.
             .scroll-top
               a.btn-scroll(href='#technologiesTop') go to top
@@ -187,7 +187,7 @@ block content
         #ai.card.card-expertise
           .card-body
             h2.card-title.text-uppercase Ai
-            img.card-img(src='./images/ai.png', alt='AI Logo')
+            img.card-img(src=asset_url + 'images/ai.png', alt='AI Logo')
             p.card-text AI in a simple definition is the ability of computers to perform tasks that otherwise takes human intelligence to do. We ensure that we are aligned with our motive of making robust solutions for clients to cater them with easier accessibility in meeting their business goal.
             .scroll-top
               a.btn-scroll(href='#technologiesTop') go to top 
@@ -195,7 +195,7 @@ block content
         #machine-learning.card.card-expertise
           .card-body
             h2.card-title Machine Learning
-            img.card-img(src='./images/machine-learning.png', alt='Machine-Learning-Logo')
+            img.card-img(src=asset_url + 'images/machine-learning.png', alt='Machine-Learning-Logo')
             p.card-text Machine learning is a development of algorithms that provides systematic ability to automatically learn and improve from experiences without being explicitly programmed. Focuses on the development of computer programs that can access data, analyze it, learn from it.
             .scroll-top
               a.btn-scroll(href='#technologiesTop') go to top
@@ -203,7 +203,7 @@ block content
         #cloud.card.card-expertise
           .card-body
             h2.card-title Cloud
-            img.card-img(src='./images/cloud.png', alt='Cloud-logo')
+            img.card-img(src=asset_url + 'images/cloud.png', alt='Cloud-logo')
             p.card-text Cloud computing has evolved business computing and software architectures into an iterative, scalable set of applications that constantly transform to meet the needs of companies and consumers. We, at Josh, help in providing simplified solutions to our clients who are in search of pre-integrated agile cloud solutions to face the complexities in business. 
             .scroll-top
               a.btn-scroll(href='#technologiesTop') go to top
@@ -211,7 +211,7 @@ block content
         #ruby.card.card-expertise
           .card-body
             h2.card-title Ruby on Rails
-            img.card-img(src='./images/ruby.png', alt='Ruby-Logo')
+            img.card-img(src=asset_url + 'images/ruby.png', alt='Ruby-Logo')
             p.card-text From last 10 years, we have delivered solutions using RoR open source technology, which helps in building web applications and back-end api applications (for mobile apps) in lightening fast time period, resulting in highly maintainable & efficient systems in cost effective manner.
             .scroll-top
               a.btn-scroll(href='#technologiesTop') go to top
@@ -219,7 +219,7 @@ block content
         #go.card.card-expertise
           .card-body
             h2.card-title Go
-            img.card-img(src='./images/go.png', alt='Go-Logo')
+            img.card-img(src=asset_url + 'images/go.png', alt='Go-Logo')
             p.card-text Golang is a very powerful language when it comes to processing data at real time. Initially it helped us to parse complex excel sheets within seconds which used to take lot of time in ruby. Later we build various applications in robotics, IOT and Web app in Golang. Golang is perfect for those who want to combine both concurrency and simplycity together.
             .scroll-top
               a.btn-scroll(href='#technologiesTop') go to top
@@ -227,7 +227,7 @@ block content
         #react.card.card-expertise
           .card-body
             h2.card-title React
-            img.card-img(src='./images/react.png', alt='React-Logo')
+            img.card-img(src=asset_url + 'images/react.png', alt='React-Logo')
             p.card-text We provide solutions using ReactJS which is a cost effective, adhere to modern architecture which not only provide a great user experience but also helps to build maintainable & tech vivid solution for clients. React not only helps in building high performing, scalable systems in less time but also guides towards more effective and efficient solutions to the businesses.
             .scroll-top
               a.btn-scroll(href='#technologiesTop') go to top
@@ -235,7 +235,7 @@ block content
         #angular.card.card-expertise
           .card-body
             h2.card-title.text-uppercase Angular
-            img.card-img(src='./images/angular.png', alt='Angular-Logo')
+            img.card-img(src=asset_url + 'images/angular.png', alt='Angular-Logo')
             p.card-text AngularJs is superheroic javascript framework. It has extraordinarily expressive, readable, and quick to develop environment. We provide solutions for web, mobile web, native mobile and native desktop using  AngularJs's reusable, productive and scalable infrastructure. AngularJs frequently derives some great ideas to improve itself and this motivates us to improvise our solutions.
             .scroll-top
               a.btn-scroll(href='#technologiesTop') go to top
@@ -243,7 +243,7 @@ block content
         #android.card.card-expertise
           .card-body
             h2.card-title Android
-            img.card-img(src='./images/android.png', alt='Android-Logo')
+            img.card-img(src=asset_url + 'images/android.png', alt='Android-Logo')
             p.card-text Android is most popular mobile operating system across the globe and when it comes to architectural standard, our android app development service is best in class. We build scalable , sustainable , light weight and secured android apps that includes both phones and tablets. Also, we try and give back to the community by making contributions in various android open source packages and actively getting involved in conferences.
             .scroll-top
               a.btn-scroll(href='#technologiesTop') go to top
@@ -251,7 +251,7 @@ block content
         #ios.card.card-expertise
           .card-body
             h2.card-title.text-uppercase Ios
-            img.card-img(src='./images/img_ios.png', alt='IOS-Logo')
+            img.card-img(src=asset_url + 'images/img_ios.png', alt='IOS-Logo')
             p.card-text We are one of the leading iPhone app development companies as we build secure, high performance, and engaging iPhone app solutions. With our knowledge of disrupting technology, tools, industry's best practices and designs, we intent to provide sustainable iPhone and iPad app solutions to our customers.
             .scroll-top
               a.btn-scroll(href='#technologiesTop') go to top
