--- a/src/views/industries.jade
+++ b/src/views/industries.jade
@@ -1,7 +1,8 @@
 extends ./layouts/bootstrap.jade
 
 block append vars
-  -var page="Industries"
+  -var page = "Industries"
+  -var title = page
 
 block content
   section#industriesTop.section-industries.section-banner
