--- a/src/views/innovation.jade
+++ b/src/views/innovation.jade
@@ -1,7 +1,8 @@
 extends ./layouts/bootstrap.jade
 
 block append vars
-  -var page="Innovation"
+  -var page = "Innovation"
+  -var title = page
 
 block content
   section.section-innovation.section-content
