--- a/src/views/layouts/parallax-layout.jade
+++ b/src/views/layouts/parallax-layout.jade
@@ -13,7 +13,7 @@ html(lang="en")
       // Favicons
       link(rel='apple-touch-icon-precomposed', href='apple-touch-icon-precomposed.png')
       link(rel='icon', href='favicon.ico')
-      title Technology Expert Solution Providers in India | Josh Software Private Limited
+      title #{title} | Josh Software Private Limited
       link(rel='stylesheet', href="styles/main.min.css")
       link(rel='stylesheet', href="styles/animate.min.css")
       link(href='https://fonts.googleapis.com/css?family=Lato:100,300,400,700', rel='stylesheet')
@@ -55,4 +55,7 @@ html(lang="en")
             }
           });
 
+        });
+        $(function() {
+          $('.-slide1.animated').addClass('fadeIn');
         });
