--- a/src/views/open-source.jade
+++ b/src/views/open-source.jade
@@ -1,7 +1,8 @@
 extends ./layouts/bootstrap.jade
 
 block append vars
-  -var page="Open Source"
+  -var page = "Open Source"
+  -var title = "Open source contribution and involvement"
 
 block content
   section.section-open_source.section-banner
