--- a/src/views/services.jade
+++ b/src/views/services.jade
@@ -1,7 +1,8 @@
 extends ./layouts/bootstrap.jade
 
 block append vars
-  -var page="Services"
+  -var page = "Services"
+  -var title = page
 
 block content
   section#servicesTop.section-services.section-banner
