--- a/src/views/about-us.jade
+++ b/src/views/about-us.jade
@@ -1,7 +1,8 @@
 extends ./layouts/bootstrap.jade
 
 block append vars
-  -var page="About Us"
+  -var page = "About Us"
+  -var title = page
 
 block content
   section.section-aboutus.section-banner
