--- a/src/views/career.jade
+++ b/src/views/career.jade
@@ -1,7 +1,8 @@
 extends ./layouts/bootstrap.jade
 
 block append vars
-  -var page="Career"
+  -var page = "Career"
+  -var title = page
 
 block content
   section#careerTop.section-career.section-banner
