--- a/src/views/contact-us.jade
+++ b/src/views/contact-us.jade
@@ -1,7 +1,8 @@
 extends ./layouts/bootstrap.jade
 
 block append vars
-  -var page="Contact Us"
+  -var page = "Contact Us"
+  -var title = page
 
 block content
   section.section-contactus.section-banner
