--- a/src/views/layouts/bootstrap.jade
+++ b/src/views/layouts/bootstrap.jade
@@ -13,7 +13,7 @@ html(lang="en")
       // Favicons
       link(rel='apple-touch-icon-precomposed', href='apple-touch-icon-precomposed.png')
       link(rel='icon', href='favicon.ico')
-      title Technology Expert Solution Providers in India | Josh Software Private Limited
+      title #{title} | Josh Software Private Limited
       link(rel='stylesheet', href="styles/main.min.css")
       link(href='https://fonts.googleapis.com/css?family=Lato:100,300,400,700', rel='stylesheet')
       script(src='https://www.google.com/recaptcha/api.js', async='', defer='')
