--- a/src/views/team.jade
+++ b/src/views/team.jade
@@ -1,7 +1,8 @@
 extends ./layouts/bootstrap.jade
 
 block append vars
-  -var page="Our Team"
+  -var page = "Our Team"
+  -var title = page
 
 block content
   section.section-team.section-banner
