--- a/src/views/technologies.jade
+++ b/src/views/technologies.jade
@@ -1,7 +1,8 @@
 extends ./layouts/bootstrap.jade
 
 block append vars
-  -var page="Technologies"
+  -var page = "Technologies"
+  -var title = page
 
 block content
   section#technologiesTop.section-technologies.section-banner
