--- a/src/views/testimonial.jade
+++ b/src/views/testimonial.jade
@@ -1,7 +1,8 @@
 extends ./layouts/bootstrap.jade
 
 block append vars
-  -var page="Testimonials"
+  -var page = "Testimonials"
+  -var title = page
 
 block content
   section.section-testimonial.section-banner
