Edited:innovation page

--- a/src/styles/pages/_innovation.scss
+++ b/src/styles/pages/_innovation.scss
@@ -1,5 +1,6 @@
 .section-innovation{
-
+  background: transparent url("../images/innov-bg-big.jpg") no-repeat center center;
+  background-size: 100% auto;
     &.section-content {
       padding: rem(60px 0 80px);
 
