Edited:innovation page

--- a/src/styles/pages/_innovation.scss
+++ b/src/styles/pages/_innovation.scss
@@ -1,6 +1,9 @@
 .section-innovation{
   background: transparent url("../images/innov-bg-big.jpg") no-repeat center center;
-  background-size: 100% auto;
+  background-size: cover;
+  @include media-breakpoint-down(sm) {
+    background: transparent url("../images/innov-bg-mobile.png") no-repeat bottom center;
+  }
     &.section-content {
       padding: rem(60px 0 80px);
 
