--- a/src/styles/pages/_innovation.scss
+++ b/src/styles/pages/_innovation.scss
@@ -1,12 +1,11 @@
 .section-innovation{
-  background: transparent url("../images/innov-bg-big.jpg") no-repeat bottom center;
-  background-size: cover;
+  background: transparent url("../images/innov-bg-side.png") no-repeat top left;
+  background-size: auto 75%;
 
   @include media-breakpoint-down(sm) {
-    background: transparent url("../images/innov-bg-mobile.png") no-repeat bottom center;
+    background: transparent url("../images/innov-bg-mobile.png") no-repeat top 30px left;
+    background-size: 100% auto;
   }
-  background: transparent url("../images/innov-bg-big.jpg") no-repeat bottom center;
-  background-size: cover;
   
     &.section-content {
       padding: rem(60px 0 80px);
@@ -81,7 +80,7 @@
   img{
     margin:0 auto;
     margin-bottom: rem(20px);
-    width: rem(455px);
+    width: rem(512px);
   }
 
   ol{
